# brick-calendar

./: LICENSE  README.md  brick-calendar.cabal
.github/workflows/: ci.yml  release.yml
programs/: CalendarDemo.hs  DualCalendarDemo.hs  SimpleDemo.hs
src/Brick/Widgets/: Calendar.hs
src/Brick/Widgets/Calendar/Internal/: Actions.hs  Core.hs  Month.hs  Utils.hs
test/: Main.hs
