cabal-version:      3.0
name:               brick-calendar
version:            0.1.0
synopsis:           Calendar widget for the Brick TUI library
description:        A library providing a month calendar widget for Brick-based terminal user interfaces
homepage:           https://github.com/ldgrp/brick-calendar
license:            MIT
license-file:       LICENSE
author:             Leo Orpilla III
maintainer:         leo@ldgrp.me
category:           User Interfaces
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:     Brick.Widgets.Calendar
  other-modules:       Brick.Widgets.Calendar.Internal.Core
                      ,Brick.Widgets.Calendar.Internal.Month
                      ,Brick.Widgets.Calendar.Internal.Utils
                      ,Brick.Widgets.Calendar.Internal.Actions
  build-depends:       base >= 4.11 && < 5
                      ,brick >= 2.8.3 && < 2.9
                      ,vty >= 6.4 && < 6.5
                      ,time >= 1.12.2 && < 1.13
                      ,text >= 2.0.2 && < 2.1
                      ,vector >= 0.13.2 && < 0.14
                      ,microlens >= 0.4.14 && < 0.5
                      ,microlens-th >= 0.4.3 && < 0.5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite brick-calendar-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.11 && < 5
                      ,brick-calendar
                      ,brick >= 2.8.3 && < 2.9
                      ,vty >= 6.4 && < 6.5
                      ,time >= 1.12.2 && < 1.13
                      ,hspec
  default-language:    Haskell2010
  ghc-options:         -Wall

executable calendar-demo
  hs-source-dirs:      programs
  main-is:             CalendarDemo.hs
  build-depends:       base >= 4.11 && < 5
                      ,brick-calendar
                      ,brick >= 2.8.3 && < 2.9
                      ,microlens-platform >= 0.4.4 && < 0.5
                      ,time >= 1.12.2 && < 1.13
                      ,vty >= 6.4 && < 6.5
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded 

executable simple-demo
  hs-source-dirs:      programs
  main-is:             SimpleDemo.hs
  build-depends:       base >= 4.11 && < 5
                      ,brick-calendar
                      ,brick >= 2.8.3 && < 2.9
                      ,time >= 1.12.2 && < 1.13
                      ,vty >= 6.4 && < 6.5
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded